--- a/_includes/datetime.html
+++ b/_includes/datetime.html
@@ -2,7 +2,7 @@
     <script type="text/javascript">
         $(function() {
             setInterval(function() {
-                var datefmt = 'dddd D MMMM YYYY';
+                var datefmt = 'ddd D MMM YYYY';
                 var timefmt = 'hh:mm:ss A';
                 var timefmt24 = 'HH:mm:ss';
                 
@@ -23,6 +23,15 @@
                 dateutc.text(utcTime.format(datefmt));
                 timeutc.text(utcTime.format(timefmt));
                 timeutc24.text(utcTime.format(timefmt24));
+                
+                var dateserver = $('#date_server');
+                var timeserver = $('#time_server');
+                var timeserver24 = $('#time24_server');
+                
+                var serverTime = moment(moment.utc().toDate());
+                dateserver.text(serverTime.format(datefmt));
+                timeserver.text(serverTime.format(timefmt));
+                timeserver24.text(serverTime.format(timefmt24));
             }, 1000);
         });
     </script>
@@ -31,20 +40,63 @@
         <table>
             <tr>
                 <td>
-                    <p class="datetime">
-                        <span id="date_local"></span><br/>
-                        <span id="time_local"></span>&nbsp;PHT<br/>
-                        <span id="time24_local"></span>&nbsp;PHT
-                    </p>
-                </td>
-                <td class="filler">
-                    <p>&nbsp;</p>
+                    <p class="label">{{ 'now' | date: '%Z' }}&nbsp;&nbsp;</p>
                 </td>
                 <td>
                     <p class="datetime">
-                        <span id="date_utc"></span><br/>
-                        <span id="time_utc"></span>&nbsp;UTC<br/>
-                        <span id="time24_utc"></span>&nbsp;UTC
+                        <span id="date_local"></span>
+                    </p>
+                </td>
+                <td>
+                    <p class="datetime">
+                        <span id="time_local"></span>
+                    </p>
+                </td>
+                <td>
+                    <p class="datetime24">
+                        <span id="time24_local"></span>
+                    </p>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <p class="label">UTC&nbsp;&nbsp;</p>
+                </td>
+                <td>
+                    <p class="datetime">
+                        <span id="date_utc"></span>
+                    </p>
+                </td>
+                <td>
+                    <p class="datetime">
+                        <span id="time_utc"></span>
+                    </p>
+                </td>
+                <td>
+                    <p class="datetime24">
+                        <span id="time24_utc"></span>
+                    </p>
+                </td>
+            </tr>
+            
+            <tr>
+                <td>
+                    <p class="label">SRV&nbsp;&nbsp;</p>
+                </td>
+                <td>
+                    <p class="datetime">
+                        <span id="date_server"></span>
+                    </p>
+                </td>
+                <td>
+                    <p class="datetime">
+                        <span id="time_server"></span>
+                    </p>
+                </td>
+                <td>
+                    <p class="datetime24">
+                        <span id="time24_server"></span>
                     </p>
                 </td>
             </tr>
