--- a/_includes/announcement.html
+++ b/_includes/announcement.html
@@ -2,11 +2,9 @@
     {% assign found = false %}
     {% capture currentdate %}{{ 'now' | date: '%F' }}{% endcapture %}
     {% for post in site.categories['announcement'] %}
-        {% capture postdatestart %}{{ post.datestart | date: '%Y-%m-%d' }}{% endcapture %}
-        {% capture postdateend %}{{ post.dateend | date: '%Y-%m-%d' }}{% endcapture %}
+        {% capture postdatestart %}{{ post.datestart | date: '%F' }}{% endcapture %}
+        {% capture postdateend %}{{ post.dateend | date: '%F' }}{% endcapture %}
         {% if currentdate >= postdatestart and currentdate <= postdateend %}
-            {% capture eventdatestart %}{{ post.eventdatestart | date: '%Y-%m-%d' }}{% endcapture %}
-            {% capture eventdateend %}{{ post.eventdateend | date: '%Y-%m-%d' }}{% endcapture %}
             <div class="announcement">
                 <div class="announcement_heading">
                     <img src="{{ post.image }}" class="label"/>
@@ -15,7 +13,7 @@
                         <i class="fa fa-exclamation-circle fa-fw fa-lg" aria-hidden="true"></i>
                     </h1>
                     <p class="date">
-                        {% if eventdatestart != eventdateend %}
+                        {% if post.eventdatestart != post.eventdateend %}
                             {{ post.eventdatestart | date: '%a %d %b %Y' }} - {{ post.eventdateend | date: '%a %d %b %Y' }}
                         {% else %}
                             {{ post.eventdatestart | date: '%a %d %b %Y' }}
