Revert date/time font

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -527,7 +527,7 @@ section.column_left_sidebar {
     }
 
     p {
-        font-family: $font_sans_thin;
+        font-family: $font_sidebar;
         font-size: $font_size_sidebar - 1;
         line-height: $font_size_sidebar + 2;
         margin: 0;
