Use 'Local' for date/time label

--- a/_includes/datetime.html
+++ b/_includes/datetime.html
@@ -31,7 +31,7 @@
         <table>
             <tr>
                 <td>
-                    <p class="label">{{ 'now' | date: '%Z' }}&nbsp;&nbsp;</p>
+                    <p class="label">Local</p>
                 </td>
                 <td>
                     <p class="datetime">
