--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -224,7 +224,7 @@ div.footnotes {
 header {
 
     width: 100%;
-    height: 90px;
+    height: 85px;
     padding-top: 5px;
     margin: 0;
     z-index: 1000;
@@ -247,13 +247,13 @@ header {
         
         #site_title {
             width: 300px;
-            height: 50px;
+            height: 45px;
             margin-bottom: 10px;
             float: left;
             
             img {
-                width: 40px;
-                height: 40px;
+                width: 35px;
+                height: 35px;
                 float: left;
                 margin: 10px 15px 0 15px;
                 @media screen {
@@ -266,7 +266,7 @@ header {
             h1 {
                 float: left;
                 display: block;
-                margin: 7px 0 0 0px;
+                margin: 9px 0 0 0px;
                 a {
                     font-family: $font_title;
                     font-size: $font_size_title;
@@ -305,9 +305,9 @@ header {
                     color: black;
                 }
 
-                margin: 0;
+                margin: 3px 0 0 0;
                 // If the title changes, the top padding may need to be adjusted
-                padding: 4px 0 10px 0px;
+                //padding: 4px 0 10px 0px;
             }
         }
         
