--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,17 +17,12 @@
     </div>
     
     <nav id="nav_top">
-        {% include common_menu.html %}
+        {% include common_menu_links.html %}
+        {% include social_media_links.html %}
 	</nav>
-    
-    {% include socmed_links.html %}
-    
-    <!-- Hide -->
-    <!-- <nav class="right"> -->
-    <!--     <li><a href="https://github.com/rmaicle/rmaicle.github.io" title="GitHub" target="_blank">GitHub</a></li> -->
-    <!-- </nav> -->
-    </div>
 </header>
 
+<!--
 <div class="border_fade">
 </div>
+-->
