--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -231,7 +231,7 @@ header {
     @media screen {
         background: $color_header_bg;
     }
-    border-bottom: 15px solid $color_header_border_bottom;
+    border-bottom: 5px solid $color_primary;
 
     @include min-screen(721px) {
         position: fixed;
@@ -306,8 +306,6 @@ header {
                 }
 
                 margin: 3px 0 0 0;
-                // If the title changes, the top padding may need to be adjusted
-                //padding: 4px 0 10px 0px;
             }
         }
         
@@ -320,30 +318,32 @@ header {
                 width: 175px;
                 height: 50px;
                 @include print_copyright;
-                /*
-                p, a {
-                    font-size: 8px;
-                    line-height: 9px;
-                    a {
-                        border: none;
-                    }
-                    img {
-                        display: none;
-                    }
-                }
-                */
             }
         }
     }
     
-    #nav_top,
+    #nav_top {
+        width: 100%;
+        margin-top: 11px;
+        margin-left: 15px;
+        background: $color_nav_bg;
+        @include min-screen(721px) {
+            float: left;
+        }
+        @include max-screen(720px) {
+            display: none;
+        }
+    }
+    
+    $button_gap: 2px;
+    
+    #common_menu_links,
     #social_media_links {
         @media print {
             display: none;
         }
         ul {
             margin: 0;
-            margin-top: 10px;
             padding: 0;
             
             li {
@@ -351,7 +351,7 @@ header {
                 display: inline;
                 list-style-type: none;
                 padding: 0;
-                margin-right: 5px;
+                margin-right: $button_gap;
                 a {
                     @include button;
                     @include top_button;
@@ -360,53 +360,25 @@ header {
         }
     }
     
-    
-    #nav_top {
-        @include min-screen(721px) {
-            float: left;
-            margin-left: 15px;
-        }
-        @include max-screen(720px) {
-            display: none;
-        }
+    #common_menu_links {
+        float: left;
     }
-        
+    
     #social_media_links {
         @include min-screen(721px) {
             float: right;
             // Offset the div right margin with the list item right margin
-            margin-right: 10px;
+            margin-right: 30px;
         }
         @include max-screen(720px) {
             float: left;
-            margin-left: 15px;
         }
         ul li {
-            margin-right: 0px;
+            margin-right: $button_gap;
             a {
                 padding-right: 7px;
             }
         }
-    }
-}
-
-div.border_fade {
-    float: left;
-    z-index: 1001;
-    margin-top: 110px;
-    height: 15px;
-    width: 100%;
-    position: fixed;
-    /* fallback for old browsers */
-    background: white;
-    /* simple linear gradient */
-    background: -webkit-linear-gradient(bottom, rgba(255,255,255,1), rgba(255,255,255,0.1));    /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(bottom, rgba(255,255,255,1), rgba(255,255,255,0.1));        /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(bottom, rgba(255,255,255,1), rgba(255,255,255,0.1));      /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to bottom, rgba(255,255,255,1), rgba(255,255,255,0.1));     /* Standard syntax (must be last) */
-    
-    @include max-screen(720px) {
-        display: none;
     }
 }
 
