--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -879,6 +879,20 @@ section.post_column_main {
         margin: 0 0 12px 0;
     }
     
+    div.image {
+        background: $color_bg;
+        padding: 5px 5px 5px 5px;
+        margin: 0 0px 20px 0;
+        p.attribution {
+            padding: 2px 0px 3px 0px;
+            margin: 2px 0 0 0;
+            font-size: $font_size_page_meta;
+            font-style: italic;
+            line-height: $font_line_height_page_meta;
+            color: $color_text;
+        }
+    }
+    
     div.video {
         width: $video_width_75;
         background: $color_bg;
