--- a/_includes/announcement.html
+++ b/_includes/announcement.html
@@ -7,11 +7,10 @@
         {% if currentdate >= postdatestart and currentdate <= postdateend %}
             <div class="announcement">
                 <div class="announcement_heading">
-                    <img src="{{ post.image }}" class="label"/>
-                    <h1>
-                        {{ post.title }}
-                        <i class="fa fa-exclamation-circle fa-fw fa-lg" aria-hidden="true"></i>
-                    </h1>
+                    {% if post.image != nil %}
+                        <img src="{{ post.image }}" class="label"/>
+                    {% endif %}
+                    <h1>{{ post.title }}<i class="fa fa-exclamation-circle fa-fw fa-lg" aria-hidden="true"></i></h1>
                     <p class="date">
                         {% if post.eventdatestart != post.eventdateend %}
                             {{ post.eventdatestart | date: '%a %d %b %Y' }} - {{ post.eventdateend | date: '%a %d %b %Y' }}
@@ -20,9 +19,7 @@
                         {% endif %}
                     </p>
                 </div>
-                {% if post.excerpt %}
-                    <p class="excerpt">{{ post.content }}</p>
-                {% endif %}
+                <p>{{ post.content | remove: '<p>' | remove: '</p>' | strip | remove: '"' }}</p>
             </div>
             {% assign found = true %}
         {% endif %}
@@ -39,7 +36,7 @@
             if (total == 1) {
                 document.write("<div class='announcement_heading'>");
                 document.write("<h1>" + announce_title[0] + "</h1>");
-                document.write("<p class='excerpt'>" + announce_text[0] + "</p>");
+                document.write("<p>" + announce_text[0] + "</p>");
                 document.write("</div>");
             } else {
                 // Keep used random number here so we could check which
@@ -54,9 +51,8 @@
                         
                             document.write("<div class='announcement_heading'>");
                             document.write("<h1>" + announce_title[randomIndex] + "</h1>");
+                            document.write("<p>" + announce_text[randomIndex] + "</p>");
                             document.write("</div>");
-                            document.write("<p class='excerpt'>" + announce_text[randomIndex] + "</p>");
-                            
                             // Store the new random number
                             randomUsed.push(randomIndex);
                             counter++;
