Italicize em HTML tags in post

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -923,7 +923,7 @@ section.post_column_main {
         
         & em {
             font-weight: normal;
-            font-style: normal;
+            font-style: italic;
         }
         
         & code {
