Rename hub layout include files 'page' to 'hub'

--- a/_layouts/hub.html
+++ b/_layouts/hub.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% include page_left_sidebar.html %}
+{% include hub_left_sidebar.html %}
 
 <section class="hub_column_main">
 
@@ -58,4 +58,4 @@ layout: default
 
 </section>
 
-{% include page_right_sidebar.html %}
+{% include hub_right_sidebar.html %}
