--- a/_includes/hub_left_sidebar.html
+++ b/_includes/hub_left_sidebar.html
@@ -7,7 +7,7 @@
     
     {% include quotes.html %}
     
-    {% include announcement.html %}
+    {% include announcements.html %}
     
     {% include news_bits.html %}
     
