--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -63,6 +63,7 @@ $font_size_label:           11px;
 
 // Announcement
 $font_announcement_title:       $font_label;
+$font_size_announcement_title:  11px;
 $font_announcement_date:        $font_serif_thin;
 $font_size_announcement_date:   13px;
 $font_announcement_text:        $font_serif_thin;
